TestArchive/large_test/cycle_0026/build.err
perl: warning: Setting locale failed.
perl: warning: Please check that your locale settings:
	LANGUAGE = (unset),
	LC_ALL = (unset),
	LC_CTYPE = "C.UTF-8",
	LANG = "en_US.UTF-8"
    are supported and installed on your system.
perl: warning: Falling back to the standard locale ("C").
%Warning-UNOPTFLAT: /opt/module-fuzz/rewiring/large_test/cycle_0026/top.sv:43:12: Signal unoptimizable: Circular combinational logic: 'tb_top.dut.numbers_concat_repl_wrapper_in_flat'
   43 | wire [5:0] numbers_concat_repl_wrapper_in_flat;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    ... For warning description see https://verilator.org/warn/UNOPTFLAT?v=5.033
                    ... Use "/* verilator lint_off UNOPTFLAT */" and lint_on around source to disable this message.
                    /opt/module-fuzz/rewiring/large_test/cycle_0026/top.sv:43:12:      Example path: tb_top.dut.numbers_concat_repl_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/numbers_concat_repl_wrapper.sv:18:14:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0026/top.sv:44:13:      Example path: tb_top.dut.numbers_concat_repl_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0026/top.sv:296:48:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0026/top.sv:55:12:      Example path: tb_top.dut.width_logic_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/width_logic_wrapper.sv:21:8:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0026/top.sv:56:12:      Example path: tb_top.dut.width_logic_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0026/top.sv:120:48:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0026/top.sv:21:12:      Example path: tb_top.dut.conditional_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/unflattened/conditional.sv:15:14:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/conditional_wrapper.sv:17:14:      Example path: tb_top.dut.u_conditional_wrapper.z
                    /opt/module-fuzz/rewiring/large_test/cycle_0026/top.sv:393:72:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0026/top.sv:43:12:      Example path: tb_top.dut.numbers_concat_repl_wrapper_in_flat
%Error: Exiting due to 1 warning(s)
